# shark

./: .gitignore  .gitmodules  Makefile  README.md  package-lock.json  package.json
shark/: README.md  meson.build  meson_options.txt  shark.mk  test.cc
shark-cli/: main.cc  meson.build  shark-cli.mk
shark-cli/subprojects/: shark  tiny-json
shark-wasm/: main.cc  meson.build  shark-wasm.mk
shark-wasm/rts/: library.js  meson.build  pre.js
shark/inc/: meson.build
shark/inc/blockfish/: common.h  heuristic.h  logging.h  matrix.h  meson.build  move.h  queue.h  think.h
shark/inc/blockfish/tbp/: bot.h  io.h  msg.h
shark/inc/blockfish/util/: bump.h  fmt.h  iter.h  macros.h
shark/src/: gen-ruleset-data.py  heuristic.cc  main.cc  matrix.cc  meson.build  move.cc  queue.cc  think.cc
shark/src/tbp/: bot.cc  msg.cc
shark/subprojects/: json-maker
support/: emscripten.ini  emscripten.mk  http-server.mk  meson.mk  node.mk  srs.json
tank/: README.md  package.json  tank.mk
tank/app/: index.jsx  matrix.js  rules.json  tbp.js  theme.json  view.js
tank/app/components/: basic-widgets.jsx  board.jsx  bottom.jsx  side.jsx
tank/app/hooks/: app.js  bot.js  keys.js
tank/app/reducers/: bot.js  edit.js  palette.js  play.js
tank/app/views/: color.js  playfield.js  queue.js
tank/static/: index.html
tank/style/: geometry.scss  index.scss
